--- a/src/app/components/dahsboard/dahsboard.component.html
+++ b/src/app/components/dahsboard/dahsboard.component.html
@@ -1,1 +1,11 @@
-<p>dahsboard works!</p>
+<h5 class="card-title">Bienvenido</h5>
+<p class="card-text">
+  Seleccione el boton comenzar para realizar el cuestionario.
+</p>
+<div class="row">
+  <div class="col-lg-4 offset-lg-4">
+    <button class="btn btn-info w-100 shadow-sm" routerLink="/question">
+      {{ "Comenzar" | uppercase }}
+    </button>
+  </div>
+</div>
