--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-light shadow-sm">
+  <span class="navbar-brand mb-0 mx-auto h1">{{
+    "Preguntas y respuestas" | uppercase
+  }}</span>
+</nav>
